2015-06-01  Martin Liska  <mliska@suse.cz>

	* et-forest.c (et_new_occ): Use new type-based pool allocator.
	(et_new_tree): Likewise.
	(et_free_tree): Likewise.
	(et_free_tree_force): Likewise.
	(et_free_pools): Likewise.
	(et_split): Likewise.

2015-06-01  Martin Liska  <mliska@suse.cz>

	* alloc-pool.c (struct alloc_pool_descriptor): Move definition
	to header file.
	* alloc-pool.h (pool_allocator::pool_allocator): New function.
	(pool_allocator::release): Likewise.
	(inline pool_allocator::release_if_empty): Likewise.
	(inline pool_allocator::~pool_allocator): Likewise.
	(pool_allocator::allocate): Likewise.
	(pool_allocator::remove): Likewise.

2015-06-01  James Greenhalgh  <james.greenhalgh@arm.com>

	* sched-deps.c (sched_analyze_2): Replace fuseable with fusible
	in comment.

2015-06-01  James Greenhalgh  <james.greenhalgh@arm.com>

	* gcc/config/arm/arm-protos.h (tune_params): Rename fuseable_ops
	to fusible_ops.
	* gcc/config/arm/arm.c (arm_print_tune_info): Likewise.
	(arm_macro_fusion_p): Likewise.
	(arm_macro_fusion_pair_p): Likewise.

2015-06-01  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/aarch64/aarch64-protos.h (tune_params): Rename
	fuseable_ops to fusible_ops.
	* config/aarch64/aarch64.c (generic_tunings): Rename
	fuseable_ops to fusible_ops.
	(cortexa53_tunings): Likewise.
	(cortexa57_tunings): Likewise.
	(thunderx_tunings): Likewise.
	(xgene1_tunings): Likewise.
	(aarch64_macro_fusion_p): Likewise.
	(aarch64_macro_fusion_pair_p): Likewise.

2015-06-01  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* config/s390/driver-native.c: New file.
	* config/s390/x-native: New file.
	* config.host: Add new files for s390.
	* config/s390/s390.h (DRIVER_SELF_SPECS): Add support for -mtune=native
	and -march=native
	* config.gcc: Likewise.
	* config/s390/s390.opt (march): Likewise; add PROCESSOR_NATIVE
	* config/s390/s390-opts.h (enum processor_type): Ditto.
	* config/s390/s390.c (s390_option_override): Catch unhandled
	PROCESSOR_NATIVE
